sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:26: error: unclosed comment
/* ecart = lgr;
^AlgCombSort:2: error: Missing closing brace `}' assumed here
def combSort() 
^AlgCombSort:3: error: expected class or object definition
{
^